# duc_repo

./: .gitignore  output_video.avi  path_predictions.csv
src/panda_test/: CMakeLists.txt  g1_joint_configs.csv  g2_joint_configs.csv  kpgnn_panda (copy).ipynb  output.txt  package.xml  reformatted_output.json  setup.py
src/panda_test/config/: dl_features copy.yaml  dl_features.yaml  dl_features_ref.yaml  dl_multi_features.yaml  dl_multi_features_euc.yaml  encoderless_control.yaml  encoderless_effort_control.yaml  encoderless_vs_controllers.yaml  franka_dl_config.yaml  franka_dl_multi_config.yaml  franka_sim_config.yaml  origami_config.yaml  path_configurations.txt  path_configurations_b128_e400_n20.txt  path_configurations_b128_e400_n50.txt  path_configurations_latest.txt  path_configurations_no_obs.txt  position_command.yaml
src/panda_test/launch/: franka_dl_control_service.launch  franka_dl_goal_feature.launch  franka_dl_multi_vs.launch  franka_dl_plot.launch  franka_dl_vs.launch  franka_sim.launch  franka_sim_control_service.launch  franka_sim_goal.launch  franka_sim_goal_feature.launch  franka_sim_plot.launch  franka_sim_test.launch  franka_sim_vs.launch  franka_start_config.launch  image_capture.launch  panda_lama.launch  panda_vel_reg.launch  rs_encoderless.launch  rs_origami.launch  vel_interface.launch
src/panda_test/models/ycbAV/: object_ids.txt  ycbObjSetup.py
src/panda_test/robots/: panda_arm_encoderless_vs.xacro  panda_arm_hand_encoderless_vs.xacro
src/panda_test/scripts/: .~lock.serial_test_287762.log#  DH.py  GNN_Training.ipynb  Robot.py  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  ViT_Trial.ipynb  ViT_Trial.py  a_star_im_plan.py  a_star_plan.py  apf_planning.py  combine_data.py  combine_data_json.py  combined_folders.ipynb  compute_accuracy.py  convert_img_type.py  convert_to_stream_name.py  create_video.py  cv2_inpaint_trial.py  define_path.py  dist_reg.ipynb  dl_generate_ref_shape.sh  dl_predict_realtime.py  dl_sim_generate_ref_shape.sh  engine.py  franka_dl_goal_img_pub.py  franka_dl_multi_vs.sh  franka_dl_plot_3f _planning.py  franka_dl_plot_3f.py  franka_dl_plot_3f_standalone.py  franka_dl_svc.py  franka_dl_vs.sh  franka_dl_vs_vis_node_3f.py  franka_dl_vs_vis_node_3f_planning.py  franka_export_dl_results.sh  franka_export_multi_dl_results.sh  franka_goal_dl_client.py  franka_goal_dl_svc.py  (+115 more)
src/panda_test/scripts/.ipynb_checkpoints/: GNN_Training-checkpoint.ipynb  kp_detection_in_dream_format_torch_kp_r_cnn_latest-checkpoint.ipynb  occ_gat_trial_01-checkpoint.ipynb  occ_net_trial_1-checkpoint.ipynb  occ_net_trial_2-checkpoint.ipynb  occ_net_trial_3-checkpoint.ipynb  occ_rnn_trial-checkpoint.ipynb
src/panda_test/scripts/archives/: custom_lazy_prm_plan_control.py  custom_lazy_prm_plan_control_modified.py  custom_lazy_prm_plan_no_obs_control.py  joint_angles_correspo.py  joint_space_lazy_prm_plan_control.py  joint_space_lazy_prm_plan_control_no_obs.py  lazy_prm_cust_euc_angle_roadmap.py  lazy_prm_plan_control.py  lazy_prm_plan_no_obs_control.py  lazy_prm_plan_roadmap.py  prm_sampled_plan_control.py
src/panda_test/scripts/data_processing/: Untitled.ipynb  all_goals_viz.py  all_goals_viz_clean.py  blend_fig_one.py  box_plots_all.py  check_joint_dist_planning.py  clean_duplicate_config.py  combine_folders.py  combine_folders_update_id.py  compute_perf_results.py  compute_results_former.py  compute_results_latest.py  copy_exps_to_drive.py  draw_obstacle_on_phys.py  find_corresponding_angles.py  image_capture.py  keypoints_addition.py  kp_and_vel_pair.py  panda_copy.py  parallel_vid_disp.py  reformat_json.py  reg_quick_script.py  renumber_deleted_files.py  start_config_node.py  test_kp_new.py  txt2speech.py  unique_vel.py  video_rrt.py  visualize_graph.py
src/panda_test/scripts/inpainting/: engine.py  inpainting_Generative Wasserstein.ipynb  inpainting_prediction.ipynb  inpainting_video1.ipynb
src/panda_test/scripts/planning/: a_star_action.py  a_star_action_hq.py  a_star_action_no_obs.py  a_star_action_old.py  a_star_maze.py  a_star_simple.py  blended.py  check_obs_bound  comp_plan.py  convert_to_int.py  custom_lazy_prm_plan_static_phys.py  custom_lazy_prm_plan_static_phys_no_obs.py  detect_red_ball.py  draw_config_lines.py  draw_obstacle_on_phys.py  lazy_prm_plan.py  lazy_prm_plan_control.py  lazy_prm_plan_no_obs_01.py  lazy_prm_plan_no_obs_static.py  lazy_prm_plan_obs.py  lazy_prm_plan_static_phys.py  lazy_prm_plan_static_rrt_phys.py  lazy_prm_plan_static_with_viz.py  obstacle_creation.py  old_custom_lazy_prm_plan_static_phys.py  old_lazy_prm_plan_static_phys.py  plot_config_sns.py  plot_config_sns_v2.py  plot_configurations.py  plot_kp_joint_pairs.py  pos_regression.py  prm_sampled_plan.py  prm_sampled_plan_no_obs.py  prm_sampled_plan_physical.py  reg_quick_script.py  regression_model.py  regression_path_planning.py  unique_vel.py  viz_rm.py
src/panda_test/scripts/sim_scripts/: att_unet.py  franka_export_sim_results.sh  franka_goal_sim_client.py  franka_goal_sim_svc.py  franka_plan_sim_svc.py  franka_sim_generate_ref_shape.sh  franka_sim_goal_img_pub.py  franka_sim_goal_img_pub_old copy.py  franka_sim_plot_3f.py  franka_sim_plot_3f_planning.py  franka_sim_plot_3f_planning_old.py  franka_sim_svc.py  franka_sim_svc_occ_inpaint.py  franka_sim_vs.sh  franka_sim_vs_vis_node_3f.py  franka_sim_vs_vis_node_3f_planning.py  inpaint_kps_detect.py  inpainting_direct_ros.py  path_planning_testing.ipynb  (+3 more)
src/panda_test/src/: franka_dl_compute_energy_functional.cpp  franka_dl_vs.cpp  franka_dl_vs_recorder.cpp  franka_joint_pub.cpp  franka_shape_compute_energy_functional.cpp  franka_shape_vs.cpp  franka_shape_vs_recorder.cpp  franka_sim_compute_energy_functional.cpp  franka_sim_vs.cpp  franka_sim_vs_fuzzy.cpp  franka_sim_vs_recorder.cpp  vel_msg_interface.cpp
src/panda_test/srv/: dl_goal_img.srv  dl_plan_sim_img.srv  energyFuncMsg.srv  energyFuncMsg_plan.srv  franka_bin_img_down.srv
src/panda_test/urdf/: franka_depth.xacro  franka_sim.xacro  green_obs.urdf.xacro  panda_arm_encoderless_vs.xacro  test_multiarray  vsbot.gazebo
(+208 files in other folders)
